# ytmusic-mcp

./: .gitignore  CLAUDE_CODE_TASK.md  LICENSE  README.md  pyproject.toml  setup.sh
examples/: playlists_spec.yaml
src/ytmusic_mcp/: __init__.py  __main__.py  auth.py  cli.py  server.py
